# kollector

./: LICENSE.txt  Makefile.am  README.md  configure.ac
src/: Makefile.am  find.c  find.h  main.c  strrcmp.c  strrcmp.h  watcher.c  watcher.h
